--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <!-- Description ? 
     <meta name="description" content=""> 
   -->
-  <meta name="author" content="Kurt Petrek">
+  <meta name="author" content="">
   <title></title>
 
   <!-- CSS -->
-  <!-- Strapped ? 
+  <!-- Bootstrap ? 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> 
   -->
-  <!-- Google fonts -->
-  <!-- Self styles -->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!-- Styles -->
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,9 +39,9 @@
   <!-- jQuery ?
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   -->
-  <!-- strapped ?
+  <!-- Bootstrap ?
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
-  <script src="js/main.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
